--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,9 @@ theme_settings:
 
   # Header and footer text
   header_text: > #two or three lines to describe your site
-     <p>Change header text in <code>_config.yml</code> <br> to update this feature.</p>
+     <p>IngChum's Note <br> - My Development and Research Story -</p>
   header_text_feature_image: assets/img/pexels/triangular.jpeg
-  footer_text: >
-   Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
+  footer_text: Copyright 2018
 
   # Icons
   rss: true  # Make sure you created a feed.xml with feed.xml layout
