--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ theme_settings:
 
   # Header and footer text
   header_text: > #two or three lines to describe your site
-     <p>IngChum's Note <br> - My Development and Research Story -</p>
+     <p>**My Development and Research Story** <br> *keyword: Computer Science, Artificial Intelligence, Data Mining*</p>
   header_text_feature_image: assets/img/pexels/triangular.jpeg
   footer_text: Copyright 2018
 
