--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # SITE CONFIGURATION
 baseurl:
 url: "https://IngChum.github.io"
-title: Type on Strap # site's title
-description: "A website with blog posts and pages" # used by search engines
+title: IngChum' Note # site's title
+description: "My Development and Research Story" # used by search engines
 
 
 # THEME-SPECIFIC CONFIGURATION
@@ -15,7 +15,7 @@ theme_settings:
 
   # Header and footer text
   header_text: > #two or three lines to describe your site
-     <p><strong>My Development and Research Story</strong></p><br><p style="font-style:italic;">keyword: Computer Science, Artificial Intelligence, Data Mining*</p>
+     <p><strong>My Development and Research Story</strong></p><br><p style="font-style:italic;">keyword: Computer Science, Artificial Intelligence, Data Mining</p>
   header_text_feature_image: assets/img/pexels/triangular.jpeg
   footer_text: Copyright 2018
 
